--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,9 @@
 {
   "name": "cv",
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "normalize-css": "normalize.css#^4.1.1"
+  },
   "devDependencies": {
     "chai": "^3.5.0",
     "mocha": "^2.4.5"
